--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="fragment_about_label_left_margin">16dp</dimen>
+    <dimen name="fragment_about_value_left_margin">72dp</dimen>
+    <dimen name="fragment_about_item_top_margin">8dp</dimen>
+    <dimen name="fragment_about_element_alignTop">16dp</dimen>
 </resources>
