--- a/app/src/main/res/layout/fragment_career_history.xml
+++ b/app/src/main/res/layout/fragment_career_history.xml
@@ -9,11 +9,13 @@
     android:orientation="vertical">
 
     <CheckBox
+        android:id="@+id/career_history_fragment_checkBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="hide non IT duties"/>
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/career_history_fragment_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
