--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.sdacademy.mg.myresume.AboutFragment">
+    tools:context="pl.sdacademy.mg.myresume.Views.AboutFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
