--- a/app/src/main/res/layout/fragment_career_history.xml
+++ b/app/src/main/res/layout/fragment_career_history.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.sdacademy.mg.myresume.CareerHistoryFragment">
+    tools:context="pl.sdacademy.mg.myresume.Views.CareerHistoryFragment">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
