--- a/app/src/main/res/layout/fragment_key_competencies.xml
+++ b/app/src/main/res/layout/fragment_key_competencies.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.sdacademy.mg.myresume.KeyCompetenciesFragment">
+    tools:context="pl.sdacademy.mg.myresume.Views.KeyCompetenciesFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
